// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primary Pill renders correctly 1`] = `
<div
  className="sc-bdVaJa iLLxmY"
>
  <div
    className="sc-VigVT dzpHnm sc-gZMcBi llrEny sc-htoDjs jslKMR sc-gzVnrw jCPitn"
  >
    pill
  </div>
</div>
`;

exports[`Small Danger Pill renders correctly 1`] = `
<div
  className="sc-bdVaJa iLLxmY"
>
  <div
    className="sc-gZMcBi sc-VigVT dzpHnm sc-gqjmRU fLsPOS sc-htoDjs jslKMR sc-gzVnrw jCPitn"
  >
    pill
  </div>
</div>
`;
